--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@ html,body{
 
 .Button{
     padding: 20px;
-    margin: 0 3px;
-    border: 2px solid black;
+    margin: 0 5px;
+    border: 24x solid black;
     border-radius: 9px;
     cursor: pointer;
+    width: 66px;
 }
 
 .Row{
@@ -20,11 +21,12 @@ html,body{
 }
 
 .row input{
+    font-size: 20px;
     margin: 8px;
-    padding: 10px 38px;
+    padding: 10px 0px;
     border: 2px solid black;
-    boder-radius:9px;
-
+    border-radius: 9px;
+    width: 305PX;
 }
 
 
